[package]
name = "ghcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha256 = "1.1"
valico = "3"
const_format = { version = "0.2", features = ["fmt"] }
which = "4.4"
oci-spec = "0.6"
flate2 = "1.0"
tar = "0.4"
debug_print = "1.0"
